fix line-height issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -410,6 +410,7 @@ section .container {
   text-transform: uppercase;
   color: #aaaaaa;
   font-family: "Poppins", sans-serif;
+  line-height: 1;
 }
 
 .section-title h2::after {
